# testaus

./: CHANGELOG.md  CMakeLists.txt  Makefile  README.md  SECURITY.md  SUPPORT.md  VERSION  implementation.cpp  implementation.h  main.cpp  test_implementation.cpp
cmake/: doctest.cmake
etc/cmake/: analysis.cmake  argparse.cmake  benchmark.cmake  catch2.cmake  compilers.cmake  coverage.cmake  coverage_compiler_options.cmake  doctest.cmake  execute_tests.cmake  fast_float.cmake  fmt.cmake  gcovr.cmake  glaze.cmake  process_coverage.cmake  pugixml.cmake  run_analysis.cmake  run_tests.cmake  spdlog.cmake  stduuid.cmake  tomlplusplus.cmake  yaml-cpp.cmake
example/: main.cpp
src/: implementation.cpp  implementation.h
test/: requirements.txt  test_implementation.cpp  test_implementation_catch2.cpp
